--- a/client/index.html
+++ b/client/index.html
@@ -8,27 +8,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <h1>bitti.io</h1>
   <div class="q t-l">
     <div class="bw">
       <div class="t">about</div>
-      <div class="b">&#xE88E;</div>
+      <div class="b">&#xE88F;</div>
     </div>
   </div>
   <div class="q t-r">
     <div class="bw">
       <div class="t">things</div>
-      <div class="b">&#xE8B8;</div>
+      <div class="b">&#xE1BD;</div>
     </div>
   </div>
   <div class="q b-l">
     <div class="bw">
-      <div class="b">&#xE2C0;</div>
+      <div class="b">&#xE80D;</div>
       <div class="t">kinko</div>
     </div>
   </div>
   <div class="q b-r">
     <div class="bw">
-      <div class="b">&#xE050;</div>
+      <div class="b">&#xE023;</div>
       <div class="t">audio</div>
     </div>
   </div>
